; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/netfilter/extr_ip_tables.c_ipt_unregister_table.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/netfilter/extr_ip_tables.c_ipt_unregister_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }
%struct.xt_table = type { i32 }
%struct.nf_hook_ops = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipt_unregister_table(%struct.net* %0, %struct.xt_table* %1, %struct.nf_hook_ops* %2) #0 {
  %4 = alloca %struct.net*, align 8
  %5 = alloca %struct.xt_table*, align 8
  %6 = alloca %struct.nf_hook_ops*, align 8
  store %struct.net* %0, %struct.net** %4, align 8
  store %struct.xt_table* %1, %struct.xt_table** %5, align 8
  store %struct.nf_hook_ops* %2, %struct.nf_hook_ops** %6, align 8
  %7 = load %struct.nf_hook_ops*, %struct.nf_hook_ops** %6, align 8
  %8 = icmp ne %struct.nf_hook_ops* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %3
  %10 = load %struct.net*, %struct.net** %4, align 8
  %11 = load %struct.nf_hook_ops*, %struct.nf_hook_ops** %6, align 8
  %12 = load %struct.xt_table*, %struct.xt_table** %5, align 8
  %13 = getelementptr inbounds %struct.xt_table, %struct.xt_table* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @hweight32(i32 %14)
  %16 = call i32 @nf_unregister_net_hooks(%struct.net* %10, %struct.nf_hook_ops* %11, i32 %15)
  br label %17

17:                                               ; preds = %9, %3
  %18 = load %struct.net*, %struct.net** %4, align 8
  %19 = load %struct.xt_table*, %struct.xt_table** %5, align 8
  %20 = call i32 @__ipt_unregister_table(%struct.net* %18, %struct.xt_table* %19)
  ret void
}

declare dso_local i32 @nf_unregister_net_hooks(%struct.net*, %struct.nf_hook_ops*, i32) #1

declare dso_local i32 @hweight32(i32) #1

declare dso_local i32 @__ipt_unregister_table(%struct.net*, %struct.xt_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
